Remove unused class; update lead-text name; remove unnecessary div

--- a/seumich/static/seumich/styles/main.scss
+++ b/seumich/static/seumich/styles/main.scss
@@ -728,7 +728,7 @@ svg {
 .content {
     margin-bottom: 100px;
 }
-.advisor-intro-text {
+.advisor-intro-lead-text {
     font-size: 18px;
 }
 .advisor-intro-column {
