--- a/seumich/templates/seumich/advisor_without_students.html
+++ b/seumich/templates/seumich/advisor_without_students.html
@@ -1,13 +1,11 @@
 {% block content %}
-    <div>
-        <h2 class="list-header">Welcome to Student Explorer!</h2>
-        <p class="advisor-intro-text">Student Explorer helps academic advisors identify academically at-risk
-            students using Learning Management System data.
-        </p>
-    </div>
+    <h2 class="list-header">Welcome to Student Explorer!</h2>
+    <p class="advisor-intro-lead-text">Student Explorer helps academic advisors identify academically at-risk
+        students using Learning Management System data.
+    </p>
     <div class="row">
         <div class="col-sm-4 advisor-intro-column">
-            <i class="fa fa-search fa-3x advisor-intro-icon"></i>
+            <i class="fa fa-search fa-3x"></i>
             <h2 class="list-header" style="margin-top: 20px">Search for any student</h2>
             <p>Type the student's name, uniqname, or UMID in the search bar above to explore their academic
                 performance. You can find any U-M Ann Arbor student, including graduate students, in Student
@@ -15,7 +13,7 @@
             </p>
         </div>
         <div class="col-sm-4 advisor-intro-column">
-            <i class="fa fa-user-plus fa-3x advisor-intro-icon"></i>
+            <i class="fa fa-user-plus fa-3x"></i>
             <h2 class="list-header" style="margin-top: 20px">Create your student list</h2>
             <p>Want to see a list of your students all in one place? Student Explorer lets you view a list of your
                 students, called a "cohort," for quick and easy reference.
@@ -24,7 +22,7 @@
             </p>
         </div>
         <div class="col-sm-4 advisor-intro-column">
-            <i class="fa fa-info-circle fa-3x advisor-intro-icon"></i>
+            <i class="fa fa-info-circle fa-3x"></i>
             <h2 class="list-header" style="margin-top: 20px">Learn more</h2>
             <p>Visit our <a href="/about/">About page</a> to learn more about the purpose and history of Student
                 Explorer, or visit <a href="https://documentation.its.umich.edu/node/831">Resources & Support</a>
