Simplify if condition; remove extra line

--- a/seumich/templates/seumich/advisor_detail.html
+++ b/seumich/templates/seumich/advisor_detail.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="container content">
         {% if advisor %}
-            {% if advisor.username == user.username and not students %}
+            {% if not students %}
                 {% include 'seumich/advisor_without_students.html' %}
             {% else %}
                 {% include 'seumich/student_list_partial.html' %}
