Move if not students check to student_list_partial

--- a/seumich/templates/seumich/student_list_partial.html
+++ b/seumich/templates/seumich/student_list_partial.html
@@ -4,108 +4,111 @@
 {% cache settings.CACHE_TTL student_list_partial request.get_full_path %}
 <script src='{% static 'seumich/sort_table.js' %}'></script>
 
-<h1 class="sub-header">{{ studentListHeader }}</h1>
-<hr class="main-no-margin-top"/>
-<h2 class="list-header">Students</h2>
+{% if advisor and not students %}
+    {% include 'seumich/advisor_without_students.html' %}
+{% else %}
+    <h1 class="sub-header">{{ studentListHeader }}</h1>
+    <hr class="main-no-margin-top"/>
+    <h2 class="list-header">Students</h2>
 
-<div class="table-responsive">
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th scope="col" class="hide-small">
-                    <strong class="table-column-name">First Name</strong>
-                </th>
-                <th scope="col" class="hide-small">
-                    <strong class="table-column-name">Last Name</strong>
-                </th>
-                 <th scope="col" class="hide-small">
-                    <strong class="table-column-name">Uniqname</strong>
-                </th>
-                <th scope="col" class="hide-small sorter-digit">
-                    <strong class="table-column-name">Student ID</strong>
-                </th>
-                <th scope="col" class="hide-small sorter-digit" data-filter="false" data-sortinitialorder="desc">
-                    <strong class="table-column-name">Status</strong>
-                </th>
-                <th scope="col" class="hide-small" data-sorter="false">
-                    <strong class="table-column-name">Cohorts</strong>
-                </th>
-            </tr>
-        </thead>
-        <tfoot>
-            <tr>
-                <th scope="col" class="hide-small">
-                    <strong class="table-column-name">First Name</strong>
-                </th>
-                <th scope="col" class="hide-small">
-                    <strong class="table-column-name">Last Name</strong>
-                </th>
-                 <th scope="col" class="hide-small">
-                    <strong class="table-column-name">Uniqname</strong>
-                </th>
-                <th scope="col" class="hide-small">
-                    <strong class="table-column-name">Student ID</strong>
-                </th>
-                <th scope="col" class="hide-small" data-sorter="false">
-                    <strong class="table-column-name">Status</strong>
-                </th>
-                <th scope="col" class="hide-small" data-sorter="false">
-                    <strong class="table-column-name">Cohorts</strong>
-                </th>
-            </tr>
-            <tr>
-                {% include 'seumich/ts_pager.html' with colspan="6" %}
-            </tr>
-        </tfoot>
-        <tbody>
-            {% for student in students %}
+    <div class="table-responsive">
+        <table class="table table-striped">
+            <thead>
                 <tr>
-                    <td scope="row" class="bold">
-                        <a href="{% url 'seumich:student' student.username %}">{{ student.first_name }}</a>
-                    </td>
-                    <td scope="row" class="bold">
-                        <a href="{% url 'seumich:student' student.username %}">{{ student.last_name }}</a>
-                    </td>
-                     <td scope="row" class="bold">
-                        <a href="{% url 'seumich:student' student.username %}">{{ student.username }}</a>
-                    </td>
-                    <td class="hide-small">{{ student.univ_id }}</td>
-                    <td data-text="{{student.status_calculated_value}}">
-                        {% for element in student.studentclasssitestatus_set.all %}
-                            {% with class_site=element.class_site %}
-                            <a href="{% url 'seumich:student_class' student.username class_site.code %}" class="class-site-status-link">
-                                {% with status=element.status %}
-                                {% if status.description == 'Green' %}
-                                    <span data-toggle="tooltip" title="{{ class_site.description }}: Encourage" data-placement="bottom">
-                                        <img src="{% static 'seumich/images/Status_Icons_Green.png' %}" alt="Green encourage status icon" width="25px" hspace="3"></img>
-                                    </span>
-                                {% elif status.description == 'Yellow' %}
-                                    <span data-toggle="tooltip" title="{{ class_site.description }}: Explore" data-placement="bottom">
-                                        <img src="{% static 'seumich/images/Status_Icons_Yellow.png' %}" alt="Yellow explore status icon" width="25px" hspace="3"></img>
-                                    </span>
-                                {% elif status.description == 'Red' %}
-                                    <span data-toggle="tooltip" title="{{ class_site.description }}: Engage" data-placement="bottom">
-                                        <img src="{% static 'seumich/images/Status_Icons_Red.png' %}" alt="Red engage status icon" width="25px" hspace="3"></img>
-                                    </span>
-                                {% elif status.description == 'Not Applicable' %}
-                                    <span data-toggle="tooltip" title="{{ class_site.description }}: No data" data-placement="bottom">
-                                        <img src="{% static 'seumich/images/Status_Icons_Not Applicable.png' %}" alt="no status available for this course icon" width="25px" hspace="3"></img>
-                                    </span>
-                                {% endif %}
-                                {% endwith %}
-                            </a>
-                            {% endwith %}
-                        {% endfor %}
-                    </td>
-                    <td class="hide-small">
-                        {% for cohort in student.cohorts.all %}
-                            <div>{{ cohort }}</div>
-                        {% endfor %}
-                    </td>
+                    <th scope="col" class="hide-small">
+                        <strong class="table-column-name">First Name</strong>
+                    </th>
+                    <th scope="col" class="hide-small">
+                        <strong class="table-column-name">Last Name</strong>
+                    </th>
+                     <th scope="col" class="hide-small">
+                        <strong class="table-column-name">Uniqname</strong>
+                    </th>
+                    <th scope="col" class="hide-small sorter-digit">
+                        <strong class="table-column-name">Student ID</strong>
+                    </th>
+                    <th scope="col" class="hide-small sorter-digit" data-filter="false" data-sortinitialorder="desc">
+                        <strong class="table-column-name">Status</strong>
+                    </th>
+                    <th scope="col" class="hide-small" data-sorter="false">
+                        <strong class="table-column-name">Cohorts</strong>
+                    </th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-
-</div>
+            </thead>
+            <tfoot>
+                <tr>
+                    <th scope="col" class="hide-small">
+                        <strong class="table-column-name">First Name</strong>
+                    </th>
+                    <th scope="col" class="hide-small">
+                        <strong class="table-column-name">Last Name</strong>
+                    </th>
+                     <th scope="col" class="hide-small">
+                        <strong class="table-column-name">Uniqname</strong>
+                    </th>
+                    <th scope="col" class="hide-small">
+                        <strong class="table-column-name">Student ID</strong>
+                    </th>
+                    <th scope="col" class="hide-small" data-sorter="false">
+                        <strong class="table-column-name">Status</strong>
+                    </th>
+                    <th scope="col" class="hide-small" data-sorter="false">
+                        <strong class="table-column-name">Cohorts</strong>
+                    </th>
+                </tr>
+                <tr>
+                    {% include 'seumich/ts_pager.html' with colspan="6" %}
+                </tr>
+            </tfoot>
+            <tbody>
+                {% for student in students %}
+                    <tr>
+                        <td scope="row" class="bold">
+                            <a href="{% url 'seumich:student' student.username %}">{{ student.first_name }}</a>
+                        </td>
+                        <td scope="row" class="bold">
+                            <a href="{% url 'seumich:student' student.username %}">{{ student.last_name }}</a>
+                        </td>
+                         <td scope="row" class="bold">
+                            <a href="{% url 'seumich:student' student.username %}">{{ student.username }}</a>
+                        </td>
+                        <td class="hide-small">{{ student.univ_id }}</td>
+                        <td data-text="{{student.status_calculated_value}}">
+                            {% for element in student.studentclasssitestatus_set.all %}
+                                {% with class_site=element.class_site %}
+                                <a href="{% url 'seumich:student_class' student.username class_site.code %}" class="class-site-status-link">
+                                    {% with status=element.status %}
+                                    {% if status.description == 'Green' %}
+                                        <span data-toggle="tooltip" title="{{ class_site.description }}: Encourage" data-placement="bottom">
+                                            <img src="{% static 'seumich/images/Status_Icons_Green.png' %}" alt="Green encourage status icon" width="25px" hspace="3"></img>
+                                        </span>
+                                    {% elif status.description == 'Yellow' %}
+                                        <span data-toggle="tooltip" title="{{ class_site.description }}: Explore" data-placement="bottom">
+                                            <img src="{% static 'seumich/images/Status_Icons_Yellow.png' %}" alt="Yellow explore status icon" width="25px" hspace="3"></img>
+                                        </span>
+                                    {% elif status.description == 'Red' %}
+                                        <span data-toggle="tooltip" title="{{ class_site.description }}: Engage" data-placement="bottom">
+                                            <img src="{% static 'seumich/images/Status_Icons_Red.png' %}" alt="Red engage status icon" width="25px" hspace="3"></img>
+                                        </span>
+                                    {% elif status.description == 'Not Applicable' %}
+                                        <span data-toggle="tooltip" title="{{ class_site.description }}: No data" data-placement="bottom">
+                                            <img src="{% static 'seumich/images/Status_Icons_Not Applicable.png' %}" alt="no status available for this course icon" width="25px" hspace="3"></img>
+                                        </span>
+                                    {% endif %}
+                                    {% endwith %}
+                                </a>
+                                {% endwith %}
+                            {% endfor %}
+                        </td>
+                        <td class="hide-small">
+                            {% for cohort in student.cohorts.all %}
+                                <div>{{ cohort }}</div>
+                            {% endfor %}
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+{% endif %}
 {% endcache %}
