--- a/seumich/templates/seumich/cohort_detail.html
+++ b/seumich/templates/seumich/cohort_detail.html
@@ -1,18 +1,21 @@
 {% extends 'seumich/advisor.html' %}
+{% load cache %}
 
 {% block content %}
-    <div class="container content">
-        {% if cohort %}
-            {% include 'seumich/student_list_partial.html' %}
-        {% else %}
-            <div class="panel panel-warning not-found">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Not Found</h3>
+    {% cache settings.CACHE_TTL cohort_detail request.get_full_path %}
+        <div class="container content">
+            {% if cohort %}
+                {% include 'seumich/student_list_partial.html' %}
+            {% else %}
+                <div class="panel panel-warning not-found">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Not Found</h3>
+                    </div>
+                    <div class="panel-body">
+                        No cohort profile found.
+                    </div>
                 </div>
-                <div class="panel-body">
-                    No cohort profile found.
-                </div>
-            </div>
-        {% endif %}
-    </div>
+            {% endif %}
+        </div>
+    {% endcache %}
 {% endblock %}
