Fixes #199 Clarify online programs info in 'About'

--- a/student_explorer/templates/student_explorer/about.html
+++ b/student_explorer/templates/student_explorer/about.html
@@ -9,13 +9,12 @@
             identify students at risk of academic jeopardy, the tool enables advisors to create timely interventions
             directing students toward resources that may facilitate behavioral change and academic growth and success.
             For more information about how Student Explorer works and how to use it, please refer to the
-            <a href="https://documentation.its.umich.edu/student-explorer-general">Student Explorer documentation</a>.
+            <a href="https://documentation.its.umich.edu/student-explorer-general" target="_blank">Student Explorer documentation</a>.
         </p>
 
         <h2 class="list-header">Student Explorer Access</h2>
-        <p>Student Explorer is available to all professional staff/faculty advisors at the U-M Ann Arbor campus upon
-            request for access and includes information about all students on the Ann Arbor campus, including graduate
-            students. Students, including peer advisors, are not able to gain access to Student Explorer.
+        <p>Student Explorer is available to all professional staff/faculty advisors at the U-M Ann Arbor campus upon request for access and includes information about all students on the Ann Arbor campus who use Canvas, including graduate
+            students (note: some graduate programs do not use Canvas and those students will not be visible in Student Explorer). Learn more about <a href="https://documentation.its.umich.edu/student-explorer-access" target="_blank">Student Explorer access</a>.
         </p>
 
         <h2 class="list-header">About Cohorts</h2>
@@ -26,7 +25,7 @@
         </p>
 
         <h2 class="list-header">Student Explorer History</h2>
-        <p>Student Explorer started in 2011 as a research project led by Professor Stephanie Teasley and Dr. Steven
+        <p>Student Explorer started in 2011 as a University of Michigan USE Lab research project led by Professor Stephanie Teasley and Dr. Steven
             Lonn in partnership with M-STEM Academies. LSA Technology Services, Academic Innovation, and ITS Teaching &
             Learning have contributed to the design, development, and management of the tool.
         </p>
